...
    <string name="landingTitle">Тесты</string>
    <string name="timeTitle">Время</string>
    <string name="timeHint">Введите время</string>

    <string name="attentionStabilityTitle">Устойчивость внимания</string>
    <string name="focusingTestTitle">Концентрация внимания</string>
    <string name="stressResistanceTestTitle">Стрессоустойчивость</string>
    <string name="englishTestTitle">Английские слова</string>
    <string name="accelerometerTestTitle">Акселерометр</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
...
    <string name="errorsCount">Количество ошибок:</string>
    <string name="missesCount">Количество пропущенных:</string>
    <string name="save">Сохранить</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="AvgReactTime">Среднее время реакции:</string>
    <string name="instruction">Инструкция</string>
    <string name="start">Начать</string>

    <string name="instruction_focusing"> В этом тесте вверху экрана появится повернутое в определенную сторону кольцо. Нужно смотреть на первую строчку из колец и выбирать кнопками внизу количество совпадающих по направлению колец, после нажатия строчка пропадает и остальные сдвигаются вверх. </string>
    <string name="instruction_attention_stability"> На экране будут меняться цифры. В какой-то момент появится красный квадрат, который закроет цифру. После этого снова появится цифра, которую нужно увидеть и нажать левую кнопку, если цифра четная, или правую кнопку, если цифра нечетная. Цифра появится лишь на короткое время, и за ней сразу последует другой красный квадрат.</string>
    <string name="instruction_stress_resistance">Зеленый свет будет перемещаться между элементами. С некоторой вероятностью он может переместиться сразу через элемент, в этот момент нужно нажимать на кнопку.</string>
    <string name="landingScreenTitle">Стартовая страница</string>
    <string name="info">Профиль</string>
...
