...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/info" />

    <Button
        android:id="@+id/testsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testing" />

    <Button
        android:id="@+id/statisticsButton"
...
